fix z-index recaptcha & map

--- a/public_html/public/css/app.css
+++ b/public_html/public/css/app.css
@@ -919,3 +919,8 @@ html {
     background-color: #242424fa;
   }
 }
+
+#map {
+    position: relative;
+    z-index: 0;
+}
